--- a/결과 저장/결과저장.md
+++ b/결과 저장/결과저장.md
@@ -1,3 +1,13 @@
 # 학습과 검증, 테스트의 결과가 저장되어 있습니다.
 
-## 저장 구조 설명...
+## 파일 구조
+### 학습 방법 / 가중치 번호 / 학습&검증, 테스트
+#### 학습 방법
+기본적인 가중치 조합이 적용된 '일반' 
+모델을 변경한 가중치 방법인 '모델별'
+#### 가중치 번호
+학습에 쓰인 가중치 조합에 따라 번호가 결정됩니다.
+#### 학습&검증
+학습과 검증의 출력이 저장되어 있습니다.
+#### 테스트
+테스트의 출력이 저장되어 있습니다.
